[package]
name = "proglog_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
serde_bytes = "0.11"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
bytes = "1"
futures-util = "0.3"
url = "1.7.2"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
prost-build = {version = "0.11.8"}

